--- a/public/frontend/css/become-instructor.css
+++ b/public/frontend/css/become-instructor.css
@@ -50,10 +50,6 @@ ul.nav {
 .nav li {
     margin-bottom: 0;
 }
-li {
-    line-height: 18px;
-    margin-bottom: 12px;
-}
 header .nav li a {
     float: right;
     margin-left: 5px;
@@ -205,4 +201,101 @@ form {
 }
 .column.omega, .columns.omega {
     margin-right: 0;
+}
+#sliderCTA {
+    background: #1e2c35;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    bottom: 33%;
+    color: #fff;
+    padding: 5px;
+    position: absolute;
+    right: 5px;
+    text-align: left;
+    z-index: 600;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.box_padding {
+    padding: 16px;
+}
+#sliderCTA h3 {
+    color: #fff;
+    font-size: 21px;
+    font-weight: 500;
+    text-align: center;
+}
+#sliderCTA p {
+    font-size: 15px;
+    width: 300px;
+    text-align: center;
+}
+#sliderCTA input[type=text] {
+    width: 100%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+#sliderCTA button.create_course {
+    background: #4985b8;
+    margin-bottom: 10px;
+    width: 100%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    font-size: 18px;
+    clear: both;
+}
+p {
+    margin: 0 0 20px 0;
+}
+.button, button, input[type="submit"], input[type="reset"], input[type="button"] {
+    background: #eee;
+    background: #3C873C;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    border: none;
+    color: #FFFFFF;
+    display: inline-block;
+    float: left;
+    padding: 5px 20px;
+}
+#sliderCTA button {
+    color: #fff;
+}
+.home-section-marketing__item_list:last-child {
+    margin-right: 0% !important;
+}
+.home-section-marketing__item_list:first-child {
+    margin-left: 0% !important;
+}
+.home-section-marketing__item {
+    width: 28%;
+    float: left;
+    margin-right: 5.33333%;
+}
+.h-text-align-center {
+    text-align: center;
+}
+.home-section-marketing__item-image {
+    height: 133px;
+}
+.t-body.-color-dark, .t-body {
+    color: #666666;
+}
+.t-body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-bottom: 16px;
+    padding: 0;
+}
+img, svg, .sc-artwork{
+	margin: 0 auto;
 }
