--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -790,3 +790,10 @@ li.current span{
     color: #111;
 }
 }
+/*Remove bootstrap column right margin*/
+.mr--10{
+    margin-right: -10px !important;
+}
+.mr--20{
+    margin-right: -20px !important;
+}
