--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -800,6 +800,9 @@ li.current span{
 .mt--10{
     margin-top: -10px !important;
 }
+.mt--20{
+    margin-top: -20px !important;
+}
 /*Author profile*/
 .thumbnail .caption {
     padding: 20px 0 !important;
