--- a/public/frontend/themes/default/assets/css/app.less
+++ b/public/frontend/themes/default/assets/css/app.less
@@ -227,16 +227,19 @@ video {
   user-select: none;
 }
 .pace .pace-progress {
-  background: #4FC3F7;
-  position: fixed;
-  z-index: 2000;
-  top: 0;
-  width: 100%;
-  right: 100%;
-  height: 2px;
+	background: #77b6ff;
+	position: fixed;
+	z-index: 2000;
+	top: 0;
+	width: 100%;
+	right: 100%;
+	height: 2px;
+	box-shadow: 0 0 10px rgba(119,182,255,0.7);
+	-webkit-transition: width 0.4s ease;
+	transition: width 0.4s ease;
 }
 .pace-inactive {
-  display: none;
+  	display: none;
 }
 .page-body {
     margin: 0;
@@ -352,6 +355,17 @@ video {
     background: #212a34;
     position: relative;
     font-family: Roboto, sans-serif
+}
+.svg .global-nav__header-enesy-logo{
+	background: url('../images/logo.svg');
+    background-size: 185px 23px;
+}
+.global-nav__header-enesy-logo>span {
+    display: block;
+    position: relative;
+    text-indent: -9999px;
+    height: 23px;
+    width: 185px;
 }
 .global-nav__header-content {
     -webkit-box-pack: justify;
