--- a/public/frontend/themes/default/assets/css/app.less
+++ b/public/frontend/themes/default/assets/css/app.less
@@ -864,6 +864,17 @@ video {
 .body--mobile-nav-open .global-nav__mobile-toggle-link .fa-reorder {
     display: none
 }
+
+.body--mobile-nav-open .global-nav__mobile-toggle-link .close-nav-button{
+    display: block;
+    line-height: 33px;
+}
+@media (max-width: 1023px) {
+    .body--mobile-nav-open .global-nav__mobile {
+        display: block;
+        z-index: 1001
+    }
+}
 .global-nav__mobile {
     display: none;
     width: 240px;
@@ -877,20 +888,7 @@ video {
     background: #212a34;
     box-shadow: 0 3px 10px rgba(0,0,0,0.3);
 }
-.body--mobile-nav-open .global-nav__mobile-toggle-link .close-nav-button{
-    display: block;
-    line-height: 33px;
-}
-.body--mobile-nav-open .global-nav__mobile{
-	display: block;
-}
-@media (max-width: 1023px) {
-    .body--mobile-nav-open .global-nav__mobile {
-        display: block;
-        z-index: 1001
-    }
-}
-.body--mobile-nav-open .global-page-overlay,
+
 .overlay-is-show .global-page-overlay {
 		position: absolute;
 		top: 0;
@@ -910,14 +908,18 @@ video {
 }
 @media (max-width: 1023px) {
     .body--mobile-nav-open .global-page-overlay {
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        z-index: 1000;
-        background-color: #3a3a3a;
-        opacity: 0.8
+        position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		background: #191919;
+		z-index: 1000;
+		opacity: .8;
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+		filter: alpha(opacity=50);
+	    -webkit-transition: all 0.15s ease-out;
+    	transition: all 0.15s ease-out;
     }
 }
 @media (max-width: 1023px) {
@@ -1413,4 +1415,278 @@ span.twitter-typeahead {
 }
 .courses-menu__topic-link:hover.topic-webdesign {
     color: #30997a
+}
+// Footer
+.page-footer {
+    background: #282828;
+    font-size: 14px;
+    line-height: 1.6em;
+    font-family: Roboto, sans-serif
+}
+.page-footer__social-link {
+    width: 36px;
+    height: 36px;
+    display: inline-block;
+    vertical-align: middle
+}
+.page-footer__social-link:hover {
+    position: relative
+}
+.page-footer__social-link:hover:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    border-radius: 3px
+}
+.page-footer__facebook-link {
+    background: url("//static.tutsplus.com/assets/social-facebook-8dcca1686d9d57da8ed9b29bd05ad185.svg") no-repeat
+}
+.page-footer__facebook-link:hover:before {
+    background-color: rgba(59, 89, 152, 0.3)
+}
+.page-footer__twitter-link {
+    background: url("//static.tutsplus.com/assets/social-twt-b5fe9b51facd37fa3d456b890e116c81.svg") no-repeat
+}
+.page-footer__twitter-link:hover:before {
+    background-color: rgba(0, 172, 237, 0.3)
+}
+.page-footer__googleplus-link {
+    background: url("//static.tutsplus.com/assets/social-google-248c1fffcb350f8fa21cc321576d4d7d.svg") no-repeat
+}
+.page-footer__googleplus-link:hover:before {
+    background-color: rgba(221, 75, 57, 0.3)
+}
+.page-footer__pinterest-link {
+    background: url("//static.tutsplus.com/assets/social-pintrest-62ccaf1be1de9a4f5426d7d1e2a91bfe.svg") no-repeat
+}
+.page-footer__pinterest-link:hover:before {
+    background-color: rgba(203, 32, 39, 0.3)
+}
+.page-footer__rss {
+    float: left;
+    width: 410px
+}
+.page-footer__envato_teaser {
+    margin-top: 10px
+}
+@media (max-width: 679px) {
+    .page-footer__envato_teaser {
+        width: 50%
+    }
+}
+.page-footer__envato-product {
+    overflow: hidden;
+    margin-bottom: 10px;
+    color: #8e8e8e;
+    display: inline-block;
+    background-color: #19212a;
+    padding: 20px;
+    position: relative
+}
+.page-footer__envato-product:last-child {
+    float: right
+}
+@media (min-width: 1340px) {
+    .page-footer__envato-product {
+        width: 630px
+    }
+}
+@media (min-width: 1024px) and (max-width: 1339px) {
+    .page-footer__envato-product {
+        width: 465px
+    }
+}
+@media (min-width: 680px) and (max-width: 1023px) {
+    .page-footer__envato-product {
+        width: 630px
+    }
+}
+@media (max-width: 679px) {
+    .page-footer__envato-product {
+        width: 180px
+    }
+    .page-footer__envato-product:last-child {
+        float: none
+    }
+}
+.page-footer__envato-product-image {
+    width: 140px;
+    margin-right: 30px;
+    float: left
+}
+.page-footer__envato-product-description {
+    margin-left: 170px
+}
+@media (max-width: 679px) {
+    .page-footer__envato-product-description {
+        margin: 122px 0 0 0;
+        word-wrap: break-word;
+        font-size: 14px
+    }
+}
+@media (max-width: 679px) {
+    .page-footer__envato-product-description-text {
+        display: none
+    }
+}
+.page-footer__envato-product-link {
+    margin-top: 5px;
+    display: block;
+    color: white;
+    position: absolute;
+    bottom: 20px
+}
+@media (max-width: 679px) {
+    .page-footer__envato-product-link {
+        position: initial;
+        white-space: normal;
+        text-align: left
+    }
+}
+.page-footer__bar {
+    background: #191919
+}
+.page-footer__bar-content {
+    color: #999999;
+    // border-top: 1px solid #333333;
+    overflow: hidden;
+    position: relative
+}
+@media (min-width: 680px) {
+    .page-footer__bar-content {
+        margin: 0 auto
+    }
+    .page-footer__bar-content:after {
+        content: "";
+        display: table;
+        clear: both
+    }
+}
+@media (min-width: 1340px) {
+    .page-footer__bar-content {
+        max-width: 1290px
+    }
+}
+@media (min-width: 1024px) and (max-width: 1339px) {
+    .page-footer__bar-content {
+        max-width: 960px
+    }
+}
+@media (min-width: 680px) and (max-width: 1023px) {
+    .page-footer__bar-content {
+        max-width: 630px
+    }
+}
+@media (min-width: 680px) {
+    .page-footer__bar-content {
+        padding-top: 5px;
+        padding-bottom: 15px
+    }
+}
+@media (max-width: 679px) {
+    .page-footer__bar-content {
+        padding: 10px 10px 7px
+    }
+}
+@media (min-width: 1340px) {
+    .page-footer__bar-content-left-column {
+        float: left;
+    }
+}
+@media (min-width: 1024px) and (max-width: 1339px) {
+    .page-footer__bar-content-left-column {
+        float: left;
+    }
+}
+@media (min-width: 1340px) {
+    .page-footer__bar-content-right-column {
+        float: right;
+        padding-top: 20px
+    }
+}
+@media (min-width: 1024px) and (max-width: 1339px) {
+    .page-footer__bar-content-right-column {
+        float: right;
+        padding-top: 20px
+    }
+}
+@media (max-width: 1023px) {
+    .page-footer__bar-content-right-column {
+        float: left;
+        width: 100%
+    }
+}
+.page-footer__bar-links {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    line-height: 40px
+}
+.page-footer__bar-link-item {
+    display: inline;
+    margin-right: 20px
+}
+.page-footer__bar-link {
+    font-size: 14px;
+    line-height: 40px;
+    color: white
+}
+.page-footer__bar-link:hover,
+.page-footer__bar-link:active,
+.page-footer__bar-link:focus {
+    color: white;
+    text-decoration: underline
+}
+.page-footer__copyright {
+    display: block;
+    float: left;
+    font-size: 12px;
+    line-height: 20px
+}
+.page-footer__copyright a{
+	color: #fff;
+}
+.page-footer__copyright a:after{
+	color: #999;
+    content: "/";
+    margin: 0 .3rem;
+}
+.page-footer__copyright a:first-child{
+    margin-left: 10px;
+}
+.page-footer__copyright a:last-child:after{
+    content: "";
+    margin: 0;
+}
+@media (max-width: 1023px) {
+    .page-footer__copyright {
+        float: none;
+        text-align: left;
+        line-height: 2em;
+        margin-bottom: 10px
+    }
+}
+.page-footer__follow-us {
+    margin: 0;
+    text-align: right;
+    font-size: 12px;
+    list-style: none
+}
+.page-footer__follow-us-element {
+    display: inline-block;
+    margin-left: 12px
+}
+@media (max-width: 1023px) {
+    .page-footer__follow-us-element:nth-child(2) {
+        margin-left: 0
+    }
+    .page-footer__follow-us-element:first-child {
+        display: inline-block;
+        line-height: 2.5em;
+        margin-left: 0
+    }
 }
